--- a/node_packages/ui/package.json
+++ b/node_packages/ui/package.json
@@ -10,14 +10,14 @@
   "devDependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "4.7.4"
   },
   "dependencies": {
-    "@babel/core": "^7.18.5",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.4",
+    "@babel/core": "7.18.5",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@mui/icons-material": "5.8.4",
+    "@mui/material": "5.8.4",
     "@types/react": "18.0.14",
     "@mui/x-data-grid": "5.12.2",
     "@mui/system": "5.8.4",
