--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "0.18.0",
+    "react-json-tree": "^0.17.0",
     "react-query": "3.39.2",
     "recharts": "2.1.11",
     "ui": "workspace:*"
