--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -28,6 +28,7 @@
     "firebase": "9.9.1",
     "formik": "2.2.9",
     "friendly-numbers": "1.0.1",
+    "material-ui-popup-state": "3.1.1",
     "meilisearch": "0.27.0",
     "metamask-react": "2.4.0",
     "monaco-editor": "^0.34.1",
