--- a/node_packages/ui/package.json
+++ b/node_packages/ui/package.json
@@ -16,16 +16,17 @@
     "@babel/core": "^7.18.5",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
     "@types/react": "18.0.14",
-    "@mui/x-data-grid": "5.12.2",
-    "@mui/system": "5.8.4",
+    "@mui/x-data-grid": "5.17.9",
+    "@mui/system": "5.10.12",
     "recharts": "2.1.11",
     "metamask-react": "2.4.0",
     "next": "12.1.6",
     "qrcode.react": "3.1.0",
     "material-ui-popup-state": "3.1.1",
+    "@mui/lab": "5.0.0-alpha.106",
     "prop-types": "15.7.2"
   }
 }
