--- a/node_packages/openapi_specs/specs/contracrt_service.yaml
+++ b/node_packages/openapi_specs/specs/contracrt_service.yaml
@@ -305,6 +305,12 @@ components:
         name:
           type: string
           description: The name of the contract
+        blockTime:
+          type: integer
+          description: The block time of the contract
+        blockNumber:
+          type: string
+          description: The block number of the contract
     
     event:
       type: object
