--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   transaction_service:
-    image: ghcr.io/etherdata-blockchain/etdstats/transaction_service:0.16.0
+    image: ghcr.io/etherdata-blockchain/etdstats/transaction_service:1.13.3
     build:
       context: .
       dockerfile: docker/services/service.dockerfile
@@ -16,8 +16,19 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
   contract_service:
+    image: ghcr.io/etherdata-blockchain/etdstats/contract_service:1.13.3
+    build:
+      context: .
+      dockerfile: docker/services/service.dockerfile
+      args:
+        - APP_NAME=contract_service
+    container_name: contract_service
+    ports:
+      - "8081:8080"
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
     
-
   redis:
     restart: always
     container_name: redis
