--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.2",
-    "mobx": "^6.6.1",
-    "next": "12.2.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
+    "mobx": "^6.6.2",
+    "next": "13.0.2",
     "openapi_specs": "workspace:*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "redoc": "2.0.0-rc.74",
-    "styled-components": "^5.3.5",
+    "redoc": "2.0.0",
+    "styled-components": "^5.3.6",
     "babel-core": "^6.26.3",
-    "core-js": "^3.24.1",
+    "core-js": "^3.26.0",
     "react-is": "^18.2.0",
     "webpack": "^5.74.0",
-    "@babel/core": "^7.18.9"
+    "@babel/core": "^7.20.2"
   },
   "devDependencies": {
-    "@types/node": "18.6.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3",
-    "typescript": "4.7.4"
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
+    "typescript": "4.8.4"
   }
 }
