--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
     needs: [test-swift-packages, test-swift-services]
     strategy:
       matrix:
-        app: ["transaction_service"]
+        app: ["transaction_service", "contract_service", "analytics_service", "block_info_service", "user_service"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Docker Buildx
