--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -13,9 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app:  ["contract_service"]
+        app:  ["contract_service", "block_info_service", "analytics_service", "transaction_service", "user_service"]
+      fail-fast: false
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Login to GCP
         uses: google-github-actions/auth@v0
         with:
@@ -26,13 +27,24 @@ jobs:
         run:  docker pull ghcr.io/${{ github.repository }}/${{ matrix.app }}:${{ github.event.inputs.tag }}
       - name: Tag image for GCR
         run: docker tag ghcr.io/${{ github.repository }}/${{ matrix.app }}:${{ github.event.inputs.tag }} gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ matrix.app }}:${{ github.event.inputs.tag }}
-      - uses: frabert/replace-string-action@v2.0
+      - uses: frabert/replace-string-action@v2.3
         id: runner
         with:
           pattern: '_'
           string: ${{matrix.app}}
           replace-with: '-'
           flags: "g"
-      - name: Deploy cloud run
-        run: gcloud run deploy ${{steps.runner.outputs.replaced}} --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ matrix.app }}:${{ github.event.inputs.tag }} --region asia-southeast1 --platform managed --set-env-vars=DATABASE_URL=${{secrets.DATABASE_TEST_URL}},JWT_SECRET=${{secrets.JWT_SECRET}}
+      - id: 'deploy'
+        uses: 'google-github-actions/deploy-cloudrun@v0'
+        with:
+          service: ${{ steps.runner.outputs.replaced }}
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ matrix.app }}:${{ github.event.inputs.tag }}
+          env_vars:
+            DATABASE_URL=${{ secrets.DATABASE_TEST_URL }},
+            JWT_SECRET=${{ secrets.JWT_SECRET }},
+            RPC_URL=${{secrets.RPC_TEST_URL}},
+            REDIS_URL=${{secrets.REDIS_TEST_URL}},
+            USER_SERVICE_URL=https://user.test.etdstatsapi.net
+          region: asia-southeast1
+          flags: --allow-unauthenticated
 
