--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "5.17.10",
     "@types/react-highlight-words": "0.16.4",
     "axios": "1.1.3",
+    "cbor": "^8.1.0",
     "dayjs": "^1.11.6",
     "dexie": "3.2.2",
     "dexie-react-hooks": "1.1.1",
@@ -42,6 +43,7 @@
     "react-highlight-words": "0.18.0",
     "react-json-tree": "^0.17.0",
     "react-query": "3.39.2",
+    "react-syntax-highlighter": "^15.5.0",
     "recharts": "2.1.16",
     "ui": "workspace:*"
   },
