--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -45,6 +45,7 @@ jobs:
             RPC_URL=${{secrets.RPC_TEST_URL}},
             REDIS_URL=${{secrets.REDIS_TEST_URL}},
             USER_SERVICE_URL=https://user.test.etdstatsapi.net
+            SOLIDITY_SERVICE_URL=https://functions.etdstatsapi.net/api/solidity/compile
           region: asia-southeast1
           flags: --allow-unauthenticated
 
