--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -46,7 +46,7 @@ jobs:
             JWT_SECRET=${{ secrets.JWT_SECRET }},
             RPC_URL=${{secrets.RPC_TEST_URL}},
             REDIS_URL=${{secrets.REDIS_TEST_URL}},
-            USER_SERVICE_URL=https://user.test.etdstatsapi.net
+            USER_SERVICE_URL=https://user.test.etdstatsapi.net,
             SOLIDITY_SERVICE_URL=https://functions.etdstatsapi.net/api/solidity/compile
           region: asia-southeast1
           flags: --allow-unauthenticated
